force-app/main/default/objects/DRC_NBC_Consignee_Bank_Details__c/DRC_NBC_Consignee_Bank_Details__c.object-meta.xml
<CustomObject>
    <label>Consignee Bank Details</label>
    <nameField>
        <displayFormat>CBD-{00000}</displayFormat>
        <label>Consignee Bank Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consignee Bank Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>