force-app/main/default/objects/DRC_NBC_Consignee_Bank_Details__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consignee Bank Details</relationshipLabel>
    <relationshipName>Consignee_Bank_Details</relationshipName>
    <type>Lookup</type>
</CustomField>