force-app/main/default/objects/DRC_NBC_Consignee_Bank_Details__c/fields/DRC_NBC_Consignee_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Consignee_Bank_Account_Number__c</fullName>
    <label>Consignee Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>