force-app/main/default/objects/DRC_NBC_Consignee_Bank_Details__c/fields/DRC_NBC_Consignee_Bank_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Consignee_Bank_Full_Address__c</fullName>
    <formula>IF(
    ISBLANK(DRC_NBC_Consignee_Bank_Address__Street__s),
    &apos;&apos;,
    DRC_NBC_Consignee_Bank_Address__Street__s &amp; &apos;, &apos;
) &amp;
IF(
    ISBLANK(DRC_NBC_Consignee_Bank_Address__City__s),
    &apos;&apos;,
    DRC_NBC_Consignee_Bank_Address__City__s &amp; &apos;, &apos;
) &amp;
IF(
    ISPICKVAL(DRC_NBC_Consignee_Bank_Address__StateCode__s, &apos;&apos;),
    &apos;&apos;,
    TEXT(DRC_NBC_Consignee_Bank_Address__StateCode__s) &amp; &apos;, &apos;
) &amp;
IF(
    ISBLANK(DRC_NBC_Consignee_Bank_Address__PostalCode__s),
    &apos;&apos;,
    DRC_NBC_Consignee_Bank_Address__PostalCode__s &amp; &apos;, &apos;
) &amp;
IF(
    ISPICKVAL(DRC_NBC_Consignee_Bank_Address__CountryCode__s, &apos;&apos;),
    &apos;&apos;,
    TEXT(DRC_NBC_Consignee_Bank_Address__CountryCode__s)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee Bank Full Address</label>
    <type>Text</type>
</CustomField>