force-app/main/default/objects/DRC_NBC_Consignee_Bank_Details__c/fields/DRC_NBC_Primary_Bank__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Primary_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Bank</label>
    <type>Checkbox</type>
</CustomField>