force-app/main/default/objects/DRC_NBC_Consignee_Bank_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>DRC_NBC_Consignee_Bank_Account_Number__c</columns>
    <columns>DRC_NBC_Consignee_Bank_IFSC_Code__c</columns>
    <columns>DRC_NBC_Consignee_Bank_Name__c</columns>
    <columns>DRC_NBC_Consignee_Bank_Full_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>